--- a/Application/Home/View/Personal/index.html
+++ b/Application/Home/View/Personal/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- create by cm -->
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="__PUBLIC__/css/personal.css">
+    <link rel="stylesheet" href="__PUBLIC__/css/home/personal.css">
+    <script src="__PUBLIC__/js/jquery.min.js"></script>
     <title>张家港工程项目协同创新服务平台档-个人中心</title>
     <style>
 		.lf{
@@ -32,89 +34,18 @@
 			width: 45%;
 		}
     </style>
+    <!-- [if IE lt 10] -->
+    	<style>
+			img{
+				border: none;
+			}
+    	</style>
+    <!-- [endif] -->
 </head>
 <body>
-	<div id="header">
-    	<div id="header_box">
-    		<a href="__ROOT__">
-    			<img src="__PUBLIC__/images/背景.png" alt="">
-    		</a>
-    		<a class="index" href="__ROOT__">回到首页</a>
-    	</div>
-    </div>
-    <div id="nav">
-    	<div id="nav_box">
-    		<ul>
-    			<li class="focus">
-    				<a href="{:U('Personal/index')}">个人中心</a>
-    			</li>
-    			<?php if(session('uid') && session('type') == 1) :?>
-	    			<li>
-	    				<a href="{:U('Personal/my_team')}">我的团队</a>
-	    			</li>
-	    		<?php endif?>
-    			<li>
-    				<a href="{:U('Personal/my_research')}">研究成果</a>
-    			</li>
-    			<li>
-    				<a href="{:U('Personal/my_award')}">我的成就</a>
-    			</li>
-    			<li>
-    				<a href="{:U('Personal/my_info')}">个人信息</a>
-    			</li>
-    			<?php if(session('type') != 0):?>
-	    			<li>
-	    				<a href="{:U('Personal/detail_info')}">详细信息</a>
-	    			</li>
-	    		<?php endif?>
-    		</ul>
-  			
-    	</div>
-    </div>
-    <div id="link_img">
-		<!-- 各种找专家，找团队的图片链接 -->
-		<ul>
-			<li>
-				<a href="{:U('Expert/expertlist')}">
-					找专家	
-				</a>
-			</li>
-			<li>
-				<a href="{:U('Team/teamlist')}">
-					找专家团队	
-				</a>
-			</li>
-			<li>
-				<a href="{:U('Result/resultlist')}">
-					找科技成果	
-				</a>
-			</li>
-			<li>
-				<a href="{:U('Demand/demandlist')}">
-					找企业需求	
-				</a>
-			</li>
-			<?php if (session('type') == 1): ?>
-				<li>
-					<a href="{:U('Team/add')}">
-						组建团队	
-					</a>
-				</li>
-			<?php endif ?>
-			<li>
-				<a href="{:U('Result/add')}">
-					发布科技成果	
-				</a>
-			</li>
-			<?php if (session('type') == 2): ?>
-				<li>
-					<a href="{:U('Demand/add')}">
-						发布企业需求	
-					</a>
-				</li>
-			<?php endif ?>
-		</ul>
-    </div>
+	
+    <include file = "Public/person_nav" />
+
     <div id="body">
     	<!-- 待办事项 居左浮动，50%-->
     	<div id="todo" class="lf">
@@ -125,14 +56,14 @@
 	    			<span>
 	    				<?php if ($list['type'] == 1): ?>
 	    					<!-- 专家用户 -->
-	    					<a href="{:U('Expert/expert',array('id'=>$list['request_id']))}">发信人</a>
+	    					<a href="{:U('Expert/expert',array('id'=>$list['request_id']))}">{$list.realname}</a>
 	    				<?php else: ?>
 	    					<?php if($list['type'] == 2): ?>
 	    						<!-- 企业用户，详细信息 -->
-	    						<a href="#">发信人</a>
+	    						<a href="#">{$list.realname}</a>
 	    					<?php else: ?>
 	    						<!-- 个人用户 -->
-	    						<a href="#">发信人</a>
+	    						<a href="#">{$list.realname}</a>
 	    					<?php endif ?>
 	    				<?php endif ?>
 	    			</span>
@@ -157,4 +88,9 @@
     </div>
     <include file="Public/footer" />
 </body>
+<script>
+   $(function(){
+        $('#personal_center').addClass('focus').siblings().removeClass('focus');
+   });
+</script>
 </html>
