--- a/Application/Home/View/Public/aboutus.html
+++ b/Application/Home/View/Public/aboutus.html
@@ -1,8 +1,20 @@
 <!doctype html>
 <html>
-<head><link rel="stylesheet" href="__PUBLIC__/css/nav.css">
-<meta charset="utf-8">
-<title>张家港工程项目协同创新服务平台</title>
+<head>
+    <!-- create by cm -->
+    <link rel="stylesheet" href="__PUBLIC__/css/home/nav.css">
+    <link rel="stylesheet" href="__PUBLIC__/css/home/listpage.css">
+    <script src="__PUBLIC__/js/jquery.min.js"></script>
+    <meta charset="utf-8">
+    <title>张家港工程项目协同创新服务平台</title>
+    <style>
+        .top-tip{
+            overflow: hidden;
+        }
+        .line2{
+            margin-top: 20px;
+        }
+    </style>
 </head>
 
 <body>
@@ -12,52 +24,38 @@
         	<img src="__PUBLIC__/images/aboutusbanner.png">   
         </div>
     </div>
-    <div class="mainbox">
-    	<div class="main">
-            <div class="leftmain">
-                <div class="mainlefttitle"><img src="__PUBLIC__/images/download_03.png"></div>
-            </div>
-            <div class="rightmain">
-            	<div class="rightmaintitle">
-                	<div class="rightmaintitleleft">
-                        <img src="__PUBLIC__/images/download_09.png">
-                        <h1>平台简介</h1>
-                    </div>
-                    <div class="rightmaintitleright">
-                    	<img src="__PUBLIC__/images/download_06.png">
-                        <p>您的位置：</p>
-                        <a href="index.html">首页</a>
-                        <p>&nbsp;>&nbsp;</p>
-                        <a href="">关于我们</a>
-                        <p>&nbsp;>&nbsp;</p>
-                        <a href="">平台简介</a>
-                        
-                    </div>
+    <div class="infolist-main">
+        <div class="leftmain">
+            <div class="mainlefttitle"><img src="__PUBLIC__/images/download_03.png"></div>
+        </div>
+        <div class="rightmain">
+        	<div class="top-tip">
+            	<div id="page-title">
+                    <img src="__PUBLIC__/images/download_09.png">
+                    <sapn>平台简介</sapn>
                 </div>
-                <div class=" line2"></div>
-            	<img class="mainimage" src="__PUBLIC__/images/just.jpg">
-                <p class="maintext">&nbsp;&nbsp;&nbsp;&nbsp;在一座金碧辉煌的宫殿里，有一位俊郎的少年坐在那宫殿的最高处。他那一双深黑色的双眼晶莹透彻,仿佛在他面前没有一丝秘密可言。
-    在他身旁有一美貌女子，满头乌黑的秀发，闭月羞花的面孔以及那婀娜多姿的身材,让人感觉是那不染凡尘的仙子一般。
-    这时走进来一个人黑衣中年男子，那中年男子走到少年面前道：“禀告圣君”天界来使，不知圣君见是不见。”原来这位少年便是末日圣君！</p>
-                <p class="maintext">&nbsp;&nbsp;&nbsp;&nbsp;在一座金碧辉煌的宫殿里，有一位俊郎的少年坐在那宫殿的最高处。他那一双深黑色的双眼晶莹透彻,仿佛在他面前没有一丝秘密可言。
-    在他身旁有一美貌女子，满头乌黑的秀发，闭月羞花的面孔以及那婀娜多姿的身材,让人感觉是那不染凡尘的仙子一般。
-    这时走进来一个人黑衣中年男子，那中年男子走到少年面前道：“禀告圣君”天界来使，不知圣君见是不见。”原来这位少年便是末日圣君！</p>
-                <p class="maintext">&nbsp;&nbsp;&nbsp;&nbsp;在一座金碧辉煌的宫殿里，有一位俊郎的少年坐在那宫殿的最高处。他那一双深黑色的双眼晶莹透彻,仿佛在他面前没有一丝秘密可言。
-    在他身旁有一美貌女子，满头乌黑的秀发，闭月羞花的面孔以及那婀娜多姿的身材,让人感觉是那不染凡尘的仙子一般。
-    这时走进来一个人黑衣中年男子，那中年男子走到少年面前道：“禀告圣君”天界来使，不知圣君见是不见。”原来这位少年便是末日圣君！</p>
-                <p class="maintext">&nbsp;&nbsp;&nbsp;&nbsp;在一座金碧辉煌的宫殿里，有一位俊郎的少年坐在那宫殿的最高处。他那一双深黑色的双眼晶莹透彻,仿佛在他面前没有一丝秘密可言。
-    在他身旁有一美貌女子，满头乌黑的秀发，闭月羞花的面孔以及那婀娜多姿的身材,让人感觉是那不染凡尘的仙子一般。
-    这时走进来一个人黑衣中年男子，那中年男子走到少年面前道：“禀告圣君”天界来使，不知圣君见是不见。”原来这位少年便是末日圣君！</p>
-                <p class="maintext">&nbsp;&nbsp;&nbsp;&nbsp;在一座金碧辉煌的宫殿里，有一位俊郎的少年坐在那宫殿的最高处。他那一双深黑色的双眼晶莹透彻,仿佛在他面前没有一丝秘密可言。
-    在他身旁有一美貌女子，满头乌黑的秀发，闭月羞花的面孔以及那婀娜多姿的身材,让人感觉是那不染凡尘的仙子一般。
-    这时走进来一个人黑衣中年男子，那中年男子走到少年面前道：“禀告圣君”天界来使，不知圣君见是不见。”原来这位少年便是末日圣君！</p>
-                <p class="maintext">&nbsp;&nbsp;&nbsp;&nbsp;在一座金碧辉煌的宫殿里，有一位俊郎的少年坐在那宫殿的最高处。他那一双深黑色的双眼晶莹透彻,仿佛在他面前没有一丝秘密可言。
-    在他身旁有一美貌女子，满头乌黑的秀发，闭月羞花的面孔以及那婀娜多姿的身材,让人感觉是那不染凡尘的仙子一般。
-    这时走进来一个人黑衣中年男子，那中年男子走到少年面前道：“禀告圣君”天界来使，不知圣君见是不见。”原来这位少年便是末日圣君！</p>
+                <div id="position">
+                    <a href="#">平台简介</a>
+                    <p>&nbsp;>&nbsp;</p>
+                    <a href="#">关于我们</a>
+                    <p>&nbsp;>&nbsp;</p>
+                    <a href="__ROOT__">首页</a>
+                    <p>您的位置：</p>
+                    <img src="__PUBLIC__/images/download_06.png">
+                </div>
             </div>
+            <div class="line2">
+                <img class="mainimage" src="__PUBLIC__/images/just.jpg">
+            </div>
+        	
+           
         </div>
     </div>
     <include file="Public/footer"/>
 </body>
-
+<script>
+     $(function(){
+        $('#nav_index').addClass('nav_active').siblings().removeClass('nav_active');
+    });  
+</script>
 </html>
