--- a/Application/Home/View/Demand/add.html
+++ b/Application/Home/View/Demand/add.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- create by cm -->
     <meta charset="UTF-8">
     <title>张家港工程项目协同创新服务平台</title>
-    <link rel="stylesheet" href="__PUBLIC__/css/signup.css">
-    <link rel="stylesheet" href="__PUBLIC__/css/nav.css">
+    <link rel="stylesheet" href="__PUBLIC__/css/home/signup.css">
+    <link rel="stylesheet" href="__PUBLIC__/css/home/nav.css">
     <script src="__PUBLIC__/js/jquery.min.js"></script>
 </head>
 <body>
@@ -17,13 +18,12 @@
                 <input class="line-input" type="text" id="demand_title" name="demand_title" required><span class="must">*</span>
             </div>
             <div class="line">
-                <label for="demand_type" style="float:left;">需求类型</label>
-                <input type="checkbox" name="demand_type[]" value="1">电子信息
-                <input type="checkbox" name="demand_type[]" value="2">机械设计与制造
-                <input type="checkbox" name="demand_type[]" value="3">新能源与环保<br/>
-                <input type="checkbox" name="demand_type[]" value="4">生物技术与医药
-                <input type="checkbox" name="demand_type[]" value="5">新材料
-                <input type="checkbox" name="demand_type[]" value="6">现代农业
+                <label for="demand_type" style="float:left;">需求领域</label>
+                <input type="checkbox" name="demand_type[]" value="1">结构工程
+                <input type="checkbox" name="demand_type[]" value="2">市政工程
+                <input type="checkbox" name="demand_type[]" value="3">防震减灾及防护工程<br/>
+                <input type="checkbox" name="demand_type[]" value="4">桥梁与隧道公程
+                <input type="checkbox" name="demand_type[]" value="5">岩土工程
                 <input type="checkbox" name="demand_type[]" value="7">其他
                 <span class="must">*</span>
             </div>
@@ -81,6 +81,9 @@
                 imgObj.filters.item("DXImageTransform.Microsoft.AlphaImageLoader").src = dataURL;
             }
         });
+ 
+        $('#nav_demand').addClass('nav_active').siblings().removeClass('nav_active');
+  
     });
 </script>
 </html>
