--- a/Application/Home/View/Demand/demand.html
+++ b/Application/Home/View/Demand/demand.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- create by cm -->
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="__PUBLIC__/css/research.css">
-    <link rel="stylesheet" href="__PUBLIC__/css/nav.css">
+    <link rel="stylesheet" href="__PUBLIC__/css/home/research.css">
+    <link rel="stylesheet" href="__PUBLIC__/css/home/nav.css">
     <script src="__PUBLIC__/js/jquery.min.js"></script>
     <title>张家港工程项目协同创新服务平台</title>
     <style>
@@ -73,7 +74,7 @@
                 <td colspan="2" class="link_img">
                     <!-- <a href=""><img src="__PUBLIC/images/" alt="点击收藏"></a> -->
                     <?php if (session('uid')): ?>
-                        <a href="{:U('Public/link',array('id'=>$demandInfo['demand_id'],'linkType'=>3,'title'=>$demandInfo['title']))}" target="_black">
+                        <a href="{:U('Public/link',array('id'=>$demandInfo['demand_id'],'linkType'=>3))}" target="_black">
                             <button>我要联系</button>
                         </a>
                     <?php else: ?>
@@ -149,4 +150,9 @@
     </div>
     <include file="Public/footer"/>
 </body>
+<script>
+     $(function(){
+        $('#nav_demand').addClass('nav_active').siblings().removeClass('nav_active');
+    });  
+</script>
 </html>
