--- a/Application/Home/View/Demand/demandlist.html
+++ b/Application/Home/View/Demand/demandlist.html
@@ -1,9 +1,10 @@
 <!doctype html>
 <html>
 <head>
-    <script src="__PUBLIC__/js/jquery.js"></script>
-    <link href="__PUBLIC__/css/nav.css" rel="stylesheet" type="text/css">
-    <link href="__PUBLIC__/css/listpage.css" rel="stylesheet" type="text/css">
+    <!-- create by cm -->
+    <script src="__PUBLIC__/js/jquery.min.js"></script>
+    <link href="__PUBLIC__/css/home/nav.css" rel="stylesheet" type="text/css">
+    <link href="__PUBLIC__/css/home/listpage.css" rel="stylesheet" type="text/css">
     <meta charset="utf-8">
     <title>张家港工程项目协同创新服务平台</title>
     <style>
@@ -20,9 +21,6 @@
             background: #0F93A9;
             color: white;
         }
-        .info-title:first-child a{
-            color: #0862E5;
-        }
         div.add{
             text-align: center;
         }
@@ -31,6 +29,16 @@
             height: 44px;
         }
     </style>
+    <!-- [if IE lt 9] -->
+        <style>
+            img{
+                border:none;
+            }
+            button{
+                padding: 2px 10px;
+            }
+        </style>
+    <!-- [endif] -->
 </head>
 <body>
     <include file="Public/nav"/>
@@ -72,14 +80,13 @@
                 </div>
             </div>
             <div class="info-type">
-                <span style="font-size:16px;">需求类型：</span>
+                <span style="font-size:16px;">需求领域：</span>
                 <a href="{:U('Demand/demandlist')}">全部</a>&nbsp;
-                <a href="{:U('Demand/demandlist',array('type' => 1))}">电子信息</a>&nbsp;
-                <a href="{:U('Demand/demandlist',array('type' => 2))}">机械设计与制造</a>&nbsp;
-                <a href="{:U('Demand/demandlist',array('type' => 3))}">新能源与环保</a>&nbsp;
-                <a href="{:U('Demand/demandlist',array('type' => 4))}">生物技术与医药</a>&nbsp;
-                <a href="{:U('Demand/demandlist',array('type' => 5))}">新材料</a>&nbsp;
-                <a href="{:U('Demand/demandlist',array('type' => 6))}">现代农业</a>&nbsp;
+                <a href="{:U('Demand/demandlist',array('type' => 1))}">结构工程</a>&nbsp;
+                <a href="{:U('Demand/demandlist',array('type' => 2))}">市政工程</a>&nbsp;
+                <a href="{:U('Demand/demandlist',array('type' => 3))}">防震减灾及防护工程</a>&nbsp;
+                <a href="{:U('Demand/demandlist',array('type' => 4))}">桥梁与隧道公程</a>&nbsp;
+                <a href="{:U('Demand/demandlist',array('type' => 5))}">岩土工程</a>&nbsp;
                 <a href="{:U('Demand/demandlist',array('type' => 1))}">其他</a>
             </div>
             <hr />
@@ -91,9 +98,9 @@
                                 {$list.title}&nbsp;&nbsp;
                             </a>
                         </span>
-                        <span>&nbsp;{$list.publish_time}</span>
+                        <span class="publish_time">&nbsp;{$list.publish_time}</span>
                         <?php if (session('uid')): ?>
-                            <a id="linkbutton" href="{:U('Public/link',array('id'=>$list['demand_id'],'linkType'=>3,'title'=>$list['title']))}" target="_black">
+                            <a id="linkbutton" href="{:U('Public/link',array('id'=>$list['demand_id'],'linkType'=>3))}" target="_black">
                                 <button>我要联系</button>
                             </a>
                         <?php else: ?>
@@ -115,6 +122,9 @@
 <script>
     function waring(){
         alert("只有企业用户才能发布需求");
-    }    
+    }
+    $(function(){
+        $('#nav_demand').addClass('nav_active').siblings().removeClass('nav_active');
+    });  
 </script>
 </html>
