--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -1,61 +1,53 @@
 <!doctype html>
 <html>
 <head>
+    <!-- create by cm -->
     <meta charset="utf-8"> 
     <script src="__PUBLIC__/js/jquery.js"></script>
-    <link href="__PUBLIC__/css/css.css" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="__PUBLIC__/css/nav.css">
+    <link href="__PUBLIC__/css/home/index.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="__PUBLIC__/css/home/nav.css">
     <title>张家港工程项目协同创新服务平台</title>
-    <style>
-        #banner-show{
-            margin: 0 auto;
-            position: relative;
-            top: -3px;
-            width: 100%;
-            height: 400px;
-            overflow: hidden;
-        }
-        #banner-container{
-            width: 5760px;
-            position: absolute;
-            left: 0;
-            top: 0;
-        }
-        #banner-container ul{
-            list-style-type: none;
-            float: left;
-        }
-        #banner-container ul li{
-            float: left;
-            max-width:1920px;
-            /*width: 100%;*/
-            min-width: 1100px;
-            height: 400px;
-        }
-        #banner-container img{
-            max-width: 1920px;
-            min-width: 1100px;
-            width: 100%;
-        }
-        .control{
-            position: absolute;
-            left: 50%;
-            margin-left: -65px;
-            top: 350px;
-        }
-        .control-btn{
-            float: left;
-            width: 13px;
-            height: 13px;
-            margin-left: 13px;
-            border: 1px solid transparent;
-            border-radius: 50%; 
-            background: white;
-        }
-        .focus{
-            background: blue;
-        }
-    </style>
+    
+    <!-- [if IE lt 10] -->
+        <style>
+            div,a,img{
+                border: none;
+            }
+            .control{
+                position: absolute;
+                left: 50%;
+                margin-left: -65px;
+                top: 350px;
+            }
+
+            .control-btn{
+                float: left;
+                width: 13px;
+                height: 13px;
+                margin-left: 13px;
+                border: 1px solid transparent;
+                background: white;
+            }
+            .focus{
+                background: blue;
+            }
+            .columnbtn{
+                float:left; 
+                width:25px; 
+                height:25px; 
+                line-height:25px; 
+                text-align:center; 
+                color:#fff; 
+                font-weight:bold;
+                cursor: pointer;
+                background: #000;
+                opacity: 0.8;
+            }
+            .columnpicture .columnpicture_hover{
+                background: red;
+            }
+        </style>
+    <!-- [endif] -->
 </head>
 
 <body>
@@ -96,12 +88,12 @@
             </div>
             <div class="columnmain">
     			<div class="columntext">
-                	<h1>创建科技 • • • • • • • • • • • •</h1>
+                	<h1>业内资讯 • • • • • • • • • • • •</h1>
                     <a href="news.html"><img src="__PUBLIC__/images/more.png"></a>
                 </div>
                 <div class="columnline"><img src="__PUBLIC__/images/line2.png"></div>
                 <div class="columntext">
-                	<h1>行业新闻 • • • • • • • • • • • •</h1>
+                	<h1>市场动态 • • • • • • • • • • • •</h1>
                     <a href=""><img src="__PUBLIC__/images/more.png"></a>
                 </div>
                 <div class="columnline"><img src="__PUBLIC__/images/line2.png"></div>
@@ -122,171 +114,167 @@
             <div class="columnmain">2</div>
             <div class="columnmain">3</div>
             <div class="columnmain">4</div>
-
+            
         </div>
     </div>
-    <include file = "Public/footer"/>
 
+    <include file = "Public/footer" />
     <script>
-    $(function(){
-        function nextImg () {
-            var container = $('#banner-container');
-            var moveWidth = ($("#banner-container li").width())*-1;
-            container.stop().animate({left:moveWidth},'slow',function(){
-                var firstImg = $('#banner-container ul li').first();
-                container.find("ul").append(firstImg);
-                $(this).css('left',"0px");
-            });
-             btnCircle();
-        }
-        function btnCircle(){
-            var btnNum = $('#banner-container ul li').first().attr("index");
-            $(".control .control-btn").siblings().removeClass("focus");
-            $(".control .control-btn").eq((btnNum+1)%3).addClass("focus");
-        }
-        setInterval(nextImg,4000);
+        $(function(){
 
-        var animateEnd = 1;
-        $('.control-btn').click(function(){
-            if(animateEnd == 1){ // 表示图片不在切换
-                $(this).addClass('focus').siblings().removeClass('focus');
-                var nextIndex = $(this).index();
-                console.log("nextIndex = "+nextIndex);
-                // 获取当前显示图片序列
-                var currentIndex = $('#banner-container li').first().attr('index');
-                // 保存当前图片
-                var curr = $("#banner-container li").first().clone();
-                if(currentIndex < nextIndex){
-                    for(var i=0; i<nextIndex-currentIndex;i++){
-                        var firstImg = $('#banner-container li').first();
-                        // 将目标图片之前的图片加到后面
-                        $('#banner-container ul').append(firstImg);
-                    }
-                    // 结束循环，当前效果
-                    // console.log("结束循环 ："+animateEnd);
-                    $("#banner-container ul").prepend(curr);
-                    var moveWidth = ($('#banner-container li').width())*-1;
-                    if(animateEnd == 1){    
-                        animateEnd = 0;//表示开始切换，期间不允许再次切换
-                        $('#banner-container').stop().animate({left:moveWidth},"slow",function(){
-                            $("#banner-container ul li").first().remove();
-                            $("#banner-container").css("left","0px");
-                            animateEnd = 1;
-                        });
-                    }
-                }
-                else{
-                    // 保存最后一张图片
-                    var curt = $("#banner-container li").last().clone();
-                    for(var i = 0; i < currentIndex - nextIndex;i++){
-                        var lastItem = $("#banner-container li").last();
-                        $("#banner-container ul").prepend(lastItem);
-                    }
-                    $("#banner-container ul").append(curt);
-                    var moveWidth = ($("#banner-container li").width())*-1;
-                    $("#banner-container").css("left",moveWidth);
-                    if(animateEnd = 1){
-                        $("#banner-container ul li").last().remove();
-                        animateEnd = 0;
-                        $("#banner-container").stop().animate({left:"0px"},"slow",function(){
-                            animateEnd = 1;
-                        });
-                    }
-                }
+            $('#nav_index').addClass('nav_active').siblings().removeClass('nav_active');
+           
+            function nextImg () {
+                var container = $('#banner-container');
+                var moveWidth = ($("#banner-container li").width())*-1;
+                container.stop().animate({left:moveWidth},'slow',function(){
+                    var firstImg = $('#banner-container ul li').first();
+                    container.find("ul").append(firstImg);
+                    $(this).css('left',"0px");
+                });
+                 btnCircle();
             }
+            function btnCircle(){
+                var btnNum = $('#banner-container ul li').first().attr("index");
+                $(".control .control-btn").siblings().removeClass("focus");
+                $(".control .control-btn").eq((btnNum+1)%3).addClass("focus");
+            }
+            setInterval(nextImg,50000);
+
+            var animateEnd = 1;
+            $('.control-btn').click(function(){
+                if(animateEnd == 1){ // 表示图片不在切换
+                    $(this).addClass('focus').siblings().removeClass('focus');
+                    var nextIndex = $(this).index();
+                    console.log("nextIndex = "+nextIndex);
+                    // 获取当前显示图片序列
+                    var currentIndex = $('#banner-container li').first().attr('index');
+                    // 保存当前图片
+                    var curr = $("#banner-container li").first().clone();
+                    if(currentIndex < nextIndex){
+                        for(var i=0; i<nextIndex-currentIndex;i++){
+                            var firstImg = $('#banner-container li').first();
+                            // 将目标图片之前的图片加到后面
+                            $('#banner-container ul').append(firstImg);
+                        }
+                        // 结束循环，当前效果
+                        // console.log("结束循环 ："+animateEnd);
+                        $("#banner-container ul").prepend(curr);
+                        var moveWidth = ($('#banner-container li').width())*-1;
+                        if(animateEnd == 1){    
+                            animateEnd = 0;//表示开始切换，期间不允许再次切换
+                            $('#banner-container').stop().animate({left:moveWidth},"slow",function(){
+                                $("#banner-container ul li").first().remove();
+                                $("#banner-container").css("left","0px");
+                                animateEnd = 1;
+                            });
+                        }
+                    }
+                    else{
+                        // 保存最后一张图片
+                        var curt = $("#banner-container li").last().clone();
+                        for(var i = 0; i < currentIndex - nextIndex;i++){
+                            var lastItem = $("#banner-container li").last();
+                            $("#banner-container ul").prepend(lastItem);
+                        }
+                        $("#banner-container ul").append(curt);
+                        var moveWidth = ($("#banner-container li").width())*-1;
+                        $("#banner-container").css("left",moveWidth);
+                        if(animateEnd = 1){
+                            $("#banner-container ul li").last().remove();
+                            animateEnd = 0;
+                            $("#banner-container").stop().animate({left:"0px"},"slow",function(){
+                                animateEnd = 1;
+                            });
+                        }
+                    }
+                }
+            });
         });
-    });
-    $(function(){
-        $(".columnpicture img").hide().first().fadeIn();
-        $(".columnbtn").first().css("background-color","red");
-        var y=0
-        var z=setInterval(function(){
-            y=y+1;
-            if(y==3){y=0;}
-            $(".columnpicture img").eq(y).fadeIn().siblings().fadeOut();
-            $(".columnbtn").eq(y).css("background-color","red").siblings().css("background-color","rgba(0,0,0,0.8)")
-        },5000);
-        $(".columnbtn").mouseenter( function(){
-            $(this).css("background-color","red").siblings().css("background-color","rgba(0,0,0,0.8)")
-        });
-        $(".columnbtn").mouseenter( function(){
-            y=$(this).index();
-            $(".columnpicture img").eq(y).fadeIn().siblings().fadeOut();
-        });
-        $(".columnpicture").mouseenter(function(){
-            clearInterval(z);
-        })
-        .mouseleave(function(){
-            z=setInterval(function(){
+        $(function(){
+            $(".columnpicture img").hide().first().fadeIn();
+            $(".columnbtn").first().addClass('columnpicture_hover');
+            var y=0
+            var z=setInterval(function(){
                 y=y+1;
                 if(y==3){y=0;}
                 $(".columnpicture img").eq(y).fadeIn().siblings().fadeOut();
-                $(".columnbtn").eq(y).css("background-color","red").siblings().css("background-color","rgba(0,0,0,0.8)");
+                $(".columnbtn").eq(y).addClass('columnpicture_hover').siblings().removeClass('columnpicture_hover')
             },5000);
-        });
+            $(".columnbtn").mouseenter( function(){
+                $(this).addClass('columnpicture_hover').siblings().removeClass('columnpicture_hover')
+            });
+            $(".columnbtn").mouseenter( function(){
+                y=$(this).index();
+                $(".columnpicture img").eq(y).fadeIn().siblings().fadeOut();
+            });
+            $(".columnpicture").mouseenter(function(){
+                clearInterval(z);
+            })
+            .mouseleave(function(){
+                z=setInterval(function(){
+                    y=y+1;
+                    if(y==3){y=0;}
+                    $(".columnpicture img").eq(y).fadeIn().siblings().fadeOut();
+                    $(".columnbtn").eq(y).addClass('columnpicture_hover').siblings().removeClass('columnpicture_hover');
+                },5000);
+            });
 
 
-
-        $(".newsbox").mouseenter(function(){
-            $(".newstext p a").css("color","#999")  
-        })
-        .mouseleave(function(){
-            $(".newstext p a").css("color","#666")  
-        });
-        var i=0;
-        var m=setInterval(function(){
-            i=i+1;
-            if(i==$(".newstext p").length){
-                i=1;
-                $(".newstext").css("margin-top","0")
-                $(".newstext").animate({marginTop:-37*i},1000)
-            }
-            $(".newstext").animate({marginTop:-37*i},1000)
-        },5000);
-
-        $(".news").mouseenter(
-            function(){
-                clearInterval(m);
-        })
-        .mouseleave(function(){
-            m=setInterval(function(){
+            var i=0;
+            var m=setInterval(function(){
                 i=i+1;
                 if(i==$(".newstext p").length){
                     i=1;
-                    $(".newstext").css("margin-top","0");
-                    $(".newstext").animate({marginTop:-37*i},1000);
+                    $(".newstext").css("margin-top","0")
+                    $(".newstext").animate({marginTop:-37*i},1000)
                 }
-                $(".newstext").animate({marginTop:-37*i},1000);
-            },5000)
-        });
+                $(".newstext").animate({marginTop:-37*i},1000)
+            },5000);
+
+            $(".news").mouseenter(
+                function(){
+                    clearInterval(m);
+            })
+            .mouseleave(function(){
+                m=setInterval(function(){
+                    i=i+1;
+                    if(i==$(".newstext p").length){
+                        i=1;
+                        $(".newstext").css("margin-top","0");
+                        $(".newstext").animate({marginTop:-37*i},1000);
+                    }
+                    $(".newstext").animate({marginTop:-37*i},1000);
+                },5000)
+            });
 
 
 
-        $(".columnmain").hide().first().show();
-        $(".columntitle").first().addClass("columntitleclick");
-        $(".columntitle").mouseenter(function(){
-            $(this).addClass("columntitlemouseenter")
-        })
-        .mouseleave(function(){
-            $(this).removeClass("columntitlemouseenter");
+            $(".columnmain").hide().first().show();
+            $(".columntitle").first().addClass("columntitleclick");
+            $(".columntitle").mouseenter(function(){
+                $(this).addClass("columntitlemouseenter")
+            })
+            .mouseleave(function(){
+                $(this).removeClass("columntitlemouseenter");
+            });
+            $(".columntitle").click(function(){
+                $(this).addClass("columntitleclick").siblings().removeClass("columntitleclick")
+                $(".columnmain").hide().eq($(this).index()).show()
+            });
+            $(".columntext p a").mouseenter(function(){
+                $(this).css("color","#666")
+            })
+            .mouseleave(function(){
+                $(this).css("color","#333")
+            });
+            $(".smallnav a").mouseenter(function(){
+                $(this).css("color","#999");
+            })
+            .mouseleave(function(){
+                $(this).css("color","#6f6f6f")
+            });
         });
-        $(".columntitle").click(function(){
-            $(this).addClass("columntitleclick").siblings().removeClass("columntitleclick")
-            $(".columnmain").hide().eq($(this).index()).show()
-        });
-        $(".columntext p a").mouseenter(function(){
-            $(this).css("color","#666")
-        })
-        .mouseleave(function(){
-            $(this).css("color","#333")
-        });
-        $(".smallnav a").mouseenter(function(){
-            $(this).css("color","#999");
-        })
-        .mouseleave(function(){
-            $(this).css("color","#6f6f6f")
-        });
-    });
        
     </script>
 </body>
