--- a/Application/Home/View/Signup/signup_company.html
+++ b/Application/Home/View/Signup/signup_company.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- create by cm -->
     <meta charset="UTF-8">
     <title>企业注册</title>
     <script src="__PUBLIC__/js/jquery.min.js"></script>
     <script src="__PUBLIC__/js/signup.js"></script>
-    <link rel="stylesheet" href="__PUBLIC__/css/signup.css">  
-    <link rel="stylesheet" href="__PUBLIC__/css/nav.css">
+    <link rel="stylesheet" href="__PUBLIC__/css/home/signup.css">  
+    <link rel="stylesheet" href="__PUBLIC__/css/home/nav.css">
     
     
 </head>
@@ -21,8 +22,43 @@
             </div>
             <div class="line">
                 <label for="username">用户名</label>
-                <input type="text" class="line-input" required id="username" name="username" ><span class="must">*</span>
+                <input type="text" class="line-input" required id="username" name="username" ><span class="must" id="nameError">*</span>
             </div>
+            <script>
+                $(function() {
+                    $('#username').change(function(event){
+                        var un = $('#username').val();
+                        if(un != ""){
+                            console.log(un);
+                            $.ajax({
+                                type:"post",
+                                url:"__ROOT__/index.php/Public/checkName",
+                                dataType:'json',
+                                data:{username:un}
+                                })
+                            .done(function(data) {
+                                console.log("success",data);
+                                if(data.code == 0){
+                                    $('#nameError').html("*");
+                                    $('input[type=submit]').show();
+                                }else{
+                                    $("#nameError").html("用户名已存在");
+                                    $('input[type=submit]').hide();
+                                }
+                            })
+                            .fail(function(XMLHttpRequest, textStatus, errorThrown){
+                                $("#nameError").html("服务器忙，请稍后");
+                                console.log("status = "+XMLHttpRequest.status);  // 200
+                                console.log("readyState = "+XMLHttpRequest.readyState); //4
+                                console.log("textStatus = "+textStatus);  //parsererror
+                            })
+                            .always(function() {
+                                console.log("complete");
+                            });
+                        }
+                    });
+                });
+            </script>
             <div class="line">
                 <label for="pwd">密码</label>
                 <input type="password" class="line-input" required id="pwd" name="pwd"><span class="must">*</span>
@@ -54,9 +90,9 @@
             <div class="line">
                 <label for="jobtype">所在城市</label>
                 <select class="line-input" name="city" id="city">
-                    <option value="1">上海</option>
-                    <option value="2">南京</option>
-                    <option value="3">北京</option>
+                    <volist id="city" name="city">
+                        <option value="{$city.id}">{$city.cityname}</option>
+                    </volist>
                 </select><span class="must">*</span>
             </div>
             <div class="line">
@@ -65,13 +101,12 @@
             </div>        
             <div class="line">
                 <label for="research" style="float:left;">经营方向</label>
-                 <input type="checkbox" name="research[]" value="1">电子信息
-                <input type="checkbox" name="research[]" value="2">机械设计与制造
-                <input type="checkbox" name="research[]" value="3">新能源与环保<br>
-                <input type="checkbox" name="research[]" value="4">生物技术与医药
-                <input type="checkbox" name="research[]" value="5">新材料
-                <input type="checkbox" name="research[]" value="6">现代农业
-                <input type="checkbox" name="research[]" value="7">其他 <span id="" class="must">*</span>
+                 <input type="checkbox" name="research[]" value="1">结构工程
+                <input type="checkbox" name="research[]" value="2">市政工程
+                <input type="checkbox" name="research[]" value="3">防震减灾及防护工程<br>
+                <input type="checkbox" name="research[]" value="4">桥梁与隧道公程
+                <input type="checkbox" name="research[]" value="5">岩土工程
+                <input type="checkbox" name="research[]" value="7">其他 <span class="must">*</span>
             </div>
             <div class="line">
                 <label for="linkman">联系人</label>
@@ -100,37 +135,6 @@
         </div>
     </form>
     <include file = "Public/footer"/>
-    <script>
-        $(function() {
-            $('#username').change(function(event){
-                if($('#username').val().trim() != ""){
-                    var un = $('#username').val();
-                    $.ajax({
-                        type:"post",
-                        url:"__ROOT__/index.php/Public/checkName",
-                        dataType:'json',
-                        data:{username:un}
-                        })
-                    .done(function(data) {
-                        console.log("success",data);
-                        if(data.code == 0){
-                            $('#nameError').html("*");
-                        }else{
-                            $("#nameError").html("用户名已存在");
-                        }
-                    })
-                    .fail(function(XMLHttpRequest, textStatus, errorThrown){
-                        $('#pwdError').html("error");  
-                        console.log("status = "+XMLHttpRequest.status);  // 200
-                        console.log("readyState = "+XMLHttpRequest.readyState); //4
-                        console.log("textStatus = "+textStatus);  //parsererror
-                    })
-                    .always(function() {
-                        console.log("complete");
-                    });
-                }
-            });
-        });
-    </script>
+   
 </body>
 </html>
