--- a/Application/Home/View/Team/add.html
+++ b/Application/Home/View/Team/add.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- create by cm -->
     <meta charset="UTF-8">
     <title>张家港工程项目协同创新服务平台</title>
-    <link rel="stylesheet" href="__PUBLIC__/css/signup.css">
+    <link rel="stylesheet" href="__PUBLIC__/css/home/signup.css">
     <script src="__PUBLIC__/js/jquery.min.js"></script>
-    <link rel="stylesheet" href="__PUBLIC__/css/nav.css">    
+    <link rel="stylesheet" href="__PUBLIC__/css/home/nav.css">    
 </head>
 <body>
     <include file="Public/nav" />
@@ -30,8 +31,10 @@
                                 console.log("success",data);
                                 if(data.code == 0){
                                     $('#nameError').html("*");
+                                    $('input[type=submit]').show();
                                 }else{
-                                    $("#nameError").html("团队名已存在");
+                                    $("#nameError").html("用户名已存在");
+                                    $('input[type=submit]').hide();
                                 }
                             })
                             .fail(function(XMLHttpRequest, textStatus, errorThrown){
@@ -44,6 +47,9 @@
                             });
                         }
                     });
+
+                $('#nav_expert').addClass('nav_active').siblings().removeClass('nav_active');
+
                 });
             </script>
             <div class="line" style="text-align:center">
@@ -55,12 +61,11 @@
             </div>
             <div class="line">
                 <label for="research_type" style="float:left;">研究领域</label>
-                <input type="checkbox" name="research_type[]" value="1">电子信息
-                <input type="checkbox" name="research_type[]" value="2">机械设计与制造
-                <input type="checkbox" name="research_type[]" value="3">新能源与环保<br/>
-                <input type="checkbox" name="research_type[]" value="4">生物技术与医药
-                <input type="checkbox" name="research_type[]" value="5">新材料
-                <input type="checkbox" name="research_type[]" value="6">现代农业
+                <input type="checkbox" name="research_type[]" value="1">结构工程
+                <input type="checkbox" name="research_type[]" value="2">市政工程
+                <input type="checkbox" name="research_type[]" value="3">防震减灾及防护工程<br/>
+                <input type="checkbox" name="research_type[]" value="4">桥梁与隧道公程
+                <input type="checkbox" name="research_type[]" value="5">岩土工程
                 <input type="checkbox" name="research_type[]" value="7">其他
                 <span class="must">*</span>
             </div>
